--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -17,6 +17,7 @@
 
 {{define "signupForm"}}
 <form action="/signup" method="POST">
+    {{csrfField}}
     <div class="form-group">
         <label for="name">
             Name
